Started on code that creates the item list

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,10 @@
     <title>Todo List</title>
 </head>
 <body>
-    
+    <div class="main">
+        <button id="newItemBtn">New Item</button>
+        <div id="formContainer"></div>
+        <div id="container"></div>
+    </div>
 </body>
 </html>
